--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my third github repo</title>
 
+
 </head>
 <body>
     <h1>we are very proud our cour country</h1>
     <h2>so you beautyfull</h2>
-    <h3>thank you my brother</h3>
+    <h3>thank you my brother small</h3>
 </body>
 </html>
