--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my third github repo</title>
+    <title>my third github repo me</title>
 
 
 </head>
 <body>
-    <h1>we are very proud our cour country</h1>
-    <h2>so you beautyfull</h2>
+    <h1>we are very proud our cour country  </h1>
+    <h2>so you beautyfull very</h2>
     <h3>thank you my brother small</h3>
 </body>
 </html>
