--- a/stard.html
+++ b/stard.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>document hello</title>
 </head>
 <body>
-    <h1>my start file is not html</h1>
+    <h1>my start file is not  html he</h1>
     <h2>new destination</h2>
     <img src="nazrul.jpg" alt="">
 </body>
